--- a/src/main/res/layout/fragment_quick__log.xml
+++ b/src/main/res/layout/fragment_quick__log.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FDFDFE"
+    android:background="@drawable/gathering_lines"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
+    android:animateLayoutChanges="true"
     tools:context=".Fragments.Quick_Log_Fragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -29,10 +31,15 @@
         android:layout_height="wrap_content"
         tools:context=".Fragments.Quick_Log_Fragment">
 
+
+
+
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,18 +51,30 @@
 
                     <com.jaredrummler.materialspinner.MaterialSpinner
                         android:id="@+id/mv_spinner_company"
-                        android:layout_width="wrap_content"
+                        android:layout_width="250dp"
                         android:layout_height="match_parent"
                         android:layout_marginStart="5dp"
+
+                        android:textSize="16dp"
+                        android:fontFamily="Roboto-LightItalic"
+                        android:textStyle="bold|italic"
+                        android:typeface="monospace"
+
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <com.jaredrummler.materialspinner.MaterialSpinner
                         android:id="@+id/mv_spinner_location"
-                        android:layout_width="wrap_content"
+                        android:layout_width="150dp"
                         android:layout_height="match_parent"
                         android:layout_marginEnd="5dp"
+
+                        android:fontFamily="Roboto-LightItalic"
+                        android:textSize="16dp"
+                        android:textStyle="bold|italic"
+                        android:typeface="monospace"
+
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -254,6 +273,63 @@
                 android:focusable="auto"
                 android:hint="Disability">
             </com.google.android.material.checkbox.MaterialCheckBox>
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/chk_baggage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="auto"
+                android:hint="Baggage">
+            </com.google.android.material.checkbox.MaterialCheckBox>
+
+
+
+
+
+
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/chk_transport"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="auto"
+                android:hint="Transportationn included">
+            </com.google.android.material.checkbox.MaterialCheckBox>
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/chk_pics"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="auto"
+                android:hint="Pictures">
+            </com.google.android.material.checkbox.MaterialCheckBox>
+
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/chk_sherpa"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="auto"
+                android:hint="Sherpa">
+            </com.google.android.material.checkbox.MaterialCheckBox>
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/chk_packing"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="auto"
+                android:hint="Packing included">
+            </com.google.android.material.checkbox.MaterialCheckBox>
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/chk_sd_given"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="auto"
+                android:hint="Sd card given">
+            </com.google.android.material.checkbox.MaterialCheckBox>
+
+
+
+
+
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -264,33 +340,13 @@
                 android:layout_marginEnd="5dp"
                 android:hint="@string/txt_additional"
                 android:textAlignment="textStart">
-
                 <MultiAutoCompleteTextView
                     android:id="@+id/txt_additional"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:lines="5"
                     android:textSize="14sp"></MultiAutoCompleteTextView>
-
             </com.google.android.material.textfield.TextInputLayout>
-
-
-
-
-
-<!--            <CheckBox-->
-<!--                android:id="@+id/chk_medical"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="30dp"-->
-<!--                android:background="@drawable/rectangle_back"-->
-<!--                android:focusable="auto"-->
-<!--                android:hint="Medical condition"-->
-<!--                />-->
-
-
-
-
-
 
 
 
@@ -310,165 +366,11 @@
            />
 
 
+<androidx.appcompat.widget.LinearLayoutCompat
+    android:layout_width="match_parent"
+    android:layout_height="300dp"></androidx.appcompat.widget.LinearLayoutCompat>
 
 
-
-
-
-
-
-
-<!--            <EditText-->
-<!--                android:id="@+id/txt_additional"-->
-<!--                android:layout_width="197dp"-->
-<!--                android:layout_height="174dp"-->
-<!--                android:layout_marginStart="32dp"-->
-<!--                android:layout_marginTop="2dp"-->
-<!--                android:layout_marginBottom="8dp"-->
-<!--                android:background="@drawable/rectangle_back"-->
-<!--                android:backgroundTintMode="screen"-->
-<!--                android:hint=" Notes"-->
-<!--                android:inputType="textMultiLine"-->
-<!--                android:nextFocusDown="@+id/btn_Quick_Log_Post"-->
-<!--                android:nextFocusForward="@+id/btn_Quick_Log_Post"-->
-<!--                android:scrollbarFadeDuration="5"-->
-<!--                android:scrollbarSize="10dp"-->
-<!--                android:scrollbarStyle="insideInset"-->
-<!--                android:scrollbars="vertical"-->
-<!--                android:selectAllOnFocus="false"-->
-<!--                android:visibility="visible"-->
-<!--          />-->
-
-
-
-            <Switch
-                android:id="@+id/chk_transport"
-                android:layout_width="150dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/rectangle_back"
-                android:checked="true"
-                android:focusable="auto"
-                android:hapticFeedbackEnabled="true"
-                android:text="transp inclu"
-          />
-
-
-            <Switch
-                android:id="@+id/chk_pics"
-                android:layout_width="150dp"
-                android:layout_height="30dp"
-                android:background="@drawable/rectangle_back"
-                android:checked="true"
-                android:focusable="auto"
-                android:hapticFeedbackEnabled="true"
-                android:nextFocusForward="@+id/txt_additional"
-                android:soundEffectsEnabled="true"
-                android:switchMinWidth="60dp"
-                android:text="pictures"
-       />
-
-            <Switch
-                android:id="@+id/chk_sherpa"
-                android:layout_width="150dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/rectangle_back"
-                android:checked="true"
-                android:clickable="true"
-                android:enabled="true"
-                android:hapticFeedbackEnabled="true"
-                android:switchMinWidth="60dp"
-                android:text="sherpa"
-            />
-
-            <Switch
-                android:id="@+id/chk_packing"
-                android:layout_width="150dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/rectangle_back"
-                android:text="pack inclu"
-   />
-
-            <Switch
-                android:id="@+id/chk_sd_given"
-                android:layout_width="150dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/rectangle_back"
-                android:text="sd given"
-        />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/rectangle_back_extended"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:text="Pax"
-               />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="flight info"
-          />
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="56dp"
-                android:text="Flight Info"
-            />
-
-            <View
-                android:id="@+id/left_divider2"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:background="@color/colorPrimary"
-          />
-
-            <View
-                android:id="@+id/right_divider2"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:background="@color/colorPrimary"
-/>
-
-            <View
-                android:id="@+id/left_divider3"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:background="@color/colorPrimary"
-           />
-
-            <View
-                android:id="@+id/right_divider3"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:background="@color/colorPrimary"
-                />
-
-            <View
-                android:id="@+id/left_divider4"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:background="@color/colorPrimary"
-               />
-
-            <View
-                android:id="@+id/right_divider4"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:background="@color/colorPrimary"
-       />
 
 
 
