--- a/src/main/res/menu/toolbar_menu.xml
+++ b/src/main/res/menu/toolbar_menu.xml
@@ -5,4 +5,6 @@
 
     <item android:title="@string/shr_filter_title" app:showAsAction="always" android:icon="@drawable/shr_filter" android:id="@+id/filter"/>
 
+<!--    TODO: Add sensor readings: Altitude|pressure  Temp|Humidity|Cloudbase ( in future trending pressure chages etc can be added i.e. as a chart or line-->
+
 </menu>
