--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorPrimaryDark2">#081D70</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorAccent2">#673AB7</color>
-
+    <color name="colorBackground">#3e79d3</color>
     <color name="grey_100">#F5F5F5</color>
     <color name="grey_300">#E0E0E0</color>
     <color name="grey_500">#9E9E9E</color>
